# esp-parser

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  contributing.rst  ignore_missing_xref.py  index.rst  license.rst  requirements.txt
doc-source/api/: esp-parser.rst  group.rst  records.rst  subrecords.rst  types.rst  utils.rst
doc-source/api/records/: ACHR.rst  ACRE.rst  ACTI.rst  ADDN.rst  ALCH.rst  ALOC.rst  AMEF.rst  AMMO.rst  ANIO.rst  ARMA.rst  ARMO.rst  ASPC.rst  AVIF.rst  BOOK.rst  BPTD.rst  CAMS.rst  CCRD.rst  CDCK.rst  CELL.rst  CHAL.rst  CHIP.rst  CLAS.rst  CLMT.rst  CMNY.rst  COBJ.rst  CONT.rst  CPTH.rst  CREA.rst  CSNO.rst  CSTY.rst  DEBR.rst  DEHY.rst  DIAL.rst  DOBJ.rst  DOOR.rst  ECZN.rst  EFSH.rst  ENCH.rst  EXPL.rst  EYES.rst  (+68 more)
esp_parser/: __init__.py  __main__.py  group.py  records.py  subrecords.py  types.py  utils.py
esp_parser/output/: __init__.py  _formate_toml.py  _style_yapf.py
esp_parser/records/: __init__.py  _achr.py  _acre.py  _acti.py  _addn.py  _alch.py  _aloc.py  _amef.py  _ammo.py  _anio.py  _arma.py  _armo.py  _aspc.py  _avif.py  _book.py  _bptd.py  _cams.py  _ccrd.py  _cdck.py  _cell.py  _chal.py  _chip.py  _clas.py  _clmt.py  _cmny.py  _cobj.py  _cont.py  _cpth.py  _crea.py  _csno.py  _csty.py  _debr.py  _dehy.py  _dial.py  _dobj.py  _door.py  _eczn.py  _efsh.py  _ench.py  _expl.py  (+69 more)
tests/: conftest.py  test_cli.py  test_reading.py  test_roundtrip.py  test_utils.py
tests/examples/: BadassBadlandsArmour.esp  EmptyPlugin2.esp
tests/test_cli_/: test_dump_to_modules.yml
tests/test_reading_/: test_read_plugins_BadassBadlandsArmour_esp_.txt  test_read_plugins_EmptyPlugin2_esp_.txt  test_read_plugins_EmptyPlugin_esp_.txt
tests/test_records/: test_achr.py  test_acti.py  test_alch.py  test_aloc.py  test_cell.py  test_chal.py  test_cont.py
tests/test_records/test_achr_/: test_achr_record.yml
tests/test_records/test_acti_/: test_achr_record.yml
tests/test_records/test_alch_/: test_achr_record.yml
tests/test_records/test_aloc_/: test_achr_record.yml
tests/test_records/test_cell_/: test_cell_record.yml  test_cell_record_xclc.yml
tests/test_records/test_chal_/: test_chal_record.yml
tests/test_records/test_cont_/: test_cont_record.yml
tests/test_utils_/: test_create_tes4.yml  test_create_tes4_no_desc.yml
tools/: make_init.py  record_class_from_webpage.py  record_docs_rst.py  requirements.txt
