[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "esp-parser"
version = "0.0.0"
description = "Parser and unparser for Bethesda ESP files."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfmodding/esp-parser"
"Issue Tracker" = "https://github.com/domdfmodding/esp-parser/issues"
"Source Code" = "https://github.com/domdfmodding/esp-parser"
Documentation = "https://esp-parser.readthedocs.io/en/latest"

[project.scripts]
dump-esp = "esp_parser.__main__:main"

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "Windows", "macOS", "Linux",]

[tool.whey]
base-classifiers = []
python-versions = [ "3.8", "3.9", "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "esp_parser"

[tool.importcheck]
always = [
    "esp_parser",
    "esp_parser.__main__",
    "esp_parser.group",
    "esp_parser.output",
    "esp_parser.records",
    "esp_parser.subrecords",
    "esp_parser.types",
    "esp_parser.utils",
]

[tool.sphinx-pyproject]
github_username = "domdfmodding"
github_repository = "esp-parser"
author = "Dominic Davis-Foster"
project = "esp-parser"
copyright = "2024 Dominic Davis-Foster"
language = "en"
package_root = "esp_parser"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinxcontrib.toctree_plus",
    "sphinx_toolbox.tweaks.latex_layout",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinx_debuginfo",
    "sphinx_licenseinfo",
    "seed_intersphinx_mapping",
    "html_section",
    "attr_utils.autoattrs",
    "ignore_missing_xref",
]
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "domdf_sphinx_theme"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
html_codeblock_linenos_style = "table"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."doc-source/requirements.txt"]
order = 30
include = false

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E111",
    "E112",
    "E113",
    "E201",
    "E202",
    "E203",
    "E211",
    "E222",
    "E223",
    "E224",
    "E225",
    "E225",
    "E226",
    "E227",
    "E228",
    "E231",
    "E241",
    "E242",
    "E251",
    "E261",
    "E262",
    "E265",
    "E271",
    "E272",
    "E303",
    "E304",
    "E306",
    "E402",
    "E502",
    "E703",
    "E711",
    "E712",
    "E713",
    "E714",
    "E721",
    "W291",
    "W292",
    "W293",
    "W391",
    "YTT101",
    "YTT102",
    "YTT103",
    "YTT201",
    "YTT202",
    "YTT203",
    "YTT204",
    "YTT301",
    "YTT302",
    "YTT303",
    "PT001",
    "PT002",
    "PT003",
    "PT006",
    "PT007",
    "PT008",
    "PT009",
    "PT010",
    "PT011",
    "PT012",
    "PT013",
    "PT014",
    "PT015",
    "PT016",
    "PT017",
    "PT018",
    "PT019",
    "PT020",
    "PT021",
    "Q001",
    "Q002",
    "Q003",
    "A001",
    "A002",
    "PYI001",
    "PYI002",
    "PYI003",
    "PYI004",
    "PYI005",
    "PYI006",
    "PYI007",
    "PYI008",
    "PYI009",
    "PYI010",
    "PYI011",
    "PYI012",
    "PYI013",
    "PYI014",
    "PYI015",
    "E301",
    "E302",
    "E305",
    "D100",
    "D101",
    "D102",
    "D104",
    "D106",
    "D201",
    "D204",
    "D207",
    "D208",
    "D209",
    "D210",
    "D211",
    "D213",
    "D214",
    "D215",
    "D300",
    "D301",
    "D400",
    "D402",
    "D403",
    "D404",
    "D415",
    "D417",
    "SLOT000",
    "SLOT001",
    "SLOT002",
]
